salesforce/force-app/main/default/objects/Northstar_Brief__c/Northstar_Brief__c.object-meta.xml
<CustomObject>
    <description>A campaign brief saved from the Northstar workbench after human confirmation.</description>
    <label>Northstar Brief</label>
    <nameField>
        <label>Brief Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Northstar Briefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>