salesforce/force-app/main/default/objects/Northstar_Brief__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <description>Who the campaign is for.</description>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>