salesforce/force-app/main/default/objects/Northstar_Brief__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The campaign this record belongs to.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Northstar Briefs</relationshipLabel>
    <relationshipName>Northstar_Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>