salesforce/force-app/main/default/objects/Northstar_Brief__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Where the campaign runs, such as email or mobile app.</description>
    <label>Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>