salesforce/force-app/main/default/objects/Northstar_Brief__c/fields/Draft_Fields__c.field-meta.xml
<CustomField>
    <fullName>Draft_Fields__c</fullName>
    <description>Every labeled field of the confirmed draft, as JSON.</description>
    <label>Draft Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>