salesforce/force-app/main/default/objects/Northstar_Brief__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <description>What the campaign should achieve.</description>
    <label>Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>